Fix bug 0003704: Improve the HTML to auto-cutoff the text in the thread name cell of the threads table if it does not fit on screen.

--- a/src/plugins/Freetalk/ui/web/css/freetalk.css
+++ b/src/plugins/Freetalk/ui/web/css/freetalk.css
@@ -9,12 +9,23 @@
 	float: right;
 }
 
+.freetalk * .threads .threads-table {
+	width: 100%;
+}
+
+.freetalk * .threads .threads-table .thread-row {
+	height: 1.1em;
+}
+
 .freetalk * .threads .threads-table .title-read {
 	overflow: hidden;
+	display: block;
 }
 
 .freetalk * .threads .threads-table .title-unread {
 	overflow: hidden;
+	display: block;
+	
 	font-weight: bold;
 }
 
